[package]
name = "tmp006"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/tmp006-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TMP006/TMP006B non-contact infrared (IR) thermopile temperature sensor."
readme = "README.md"
keywords = ["temperature", "thermopile", "sensor", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/tmp006-rs"
documentation = "https://docs.rs/tmp006"
edition = "2018"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "1.0"
libm = "0.2"
nb = "1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = {version = "0.10", default-features = false, features = ["eh1"]}

[profile.release]
lto = true
